1999-05-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* options.cc (add, ~controller, remove_widget): New functions of
	class controller.
	(populate, create_widget): Use controller::func_data.
	(create_widget): Use controller::add.
	(~options_dialog, remove_widget): Removed from class
	options_dialog.
	(handle_ok): Use controller::to_ptr.

	* options.h (class controller): New class.
	(class options_dialog): Derive from controller and remove
	duplicate members.

	* main.cc (edit_options): Use the new interface.

	* options.h (class options_dialog): Update members.
	(class options_dialog): Move create_widget to protected.

	* options.cc (create_widget): Do not set modal.
	(act): New function.
	(~options_dialog): Set sensitive flags to false, too.
	(handle_ok, handle_cancel, handle_delete_event, remove_widget):
	Add `throw ()'.
	(remove_widget): Remove a diagnostic log message.

1999-05-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* configure.in: Set VERSION to 1.4.0.

	* main.cc: Include <sys/stat.h>.

	* NEWS: Modified.

	* configure.in: Add check for mkdir.
	Set VERSION to 1.3.1.

	* main.cc (main): Make ~/.rglclock directory.

	* clockoptions.cc (create_widget): Put unit after the spin button.

	* glclock.cc (update): Draw only for drawable widgets.

	* rglclock.1: Remove keyword substitutions for Package and
	Version.

	* configure.in: Remove PRCS keyword substitutions.

	* TODO: Modified.

1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* main.cc (main): Add p as a callback of c.
	(main): Remove save before exit.

	* profile.h (options_callback): Add glclock::options_callback to
	virtual base class.

	* profile.cc (options_changed): New function.

	* glclock.cc (remove_callback, add_callback): New functions.
	(set_update_rate): Call all callbacks.

	* glclock.h (class glclock): Add struct options_callback.
	(class glclock): Add member callbacks.
