@@ -72,57 +72,64 @@ namespace
 void
 profile::options_changed(glclock *clock)
 {
-  save(clock);
+  changed = true;
 }
 
 void
 profile::save(glclock *clock)
 {
+  if (changed)
+    {
+      changed = false;
+
 #ifdef HAVE_GNOME_XML_PARSER_H
-  xmlDocPtr doc = xmlParseFile(file_name.c_str());
-  if (doc == NULL)
-    doc = xmlNewDoc(reinterpret_cast<CHAR *>("1.0"));
+      xmlDocPtr doc = xmlParseFile(file_name.c_str());
+      if (doc == NULL)
+	doc = xmlNewDoc(reinterpret_cast<CHAR *>("1.0"));
 
-  try
-    {
-      if (doc->root == NULL)
+      try
 	{
-	  doc->root = xmlNewNode(NULL, reinterpret_cast<CHAR *>(PACKAGE));
-	  xmlNewChild(doc->root, NULL,
-		      reinterpret_cast<CHAR *>("misc"), NULL);
-	}
-
-      for (xmlNode_iterator i = doc->root->childs;
-	   i != xmlNode_iterator();
-	   ++i)
-	{
-	  if (xmlStrcmp(i->name, reinterpret_cast<CHAR *>("misc")) == 0)
+	  if (doc->root == NULL)
 	    {
-	      char v[10];
-	      sprintf(v, "%d", clock->update_rate());
-	      xmlSetProp(&*i, reinterpret_cast<CHAR *>("update"),
-			 reinterpret_cast<CHAR *>(v));
+	      doc->root = xmlNewNode(NULL, reinterpret_cast<CHAR *>(PACKAGE));
+	      xmlNewChild(doc->root, NULL,
+			  reinterpret_cast<CHAR *>("misc"), NULL);
 	    }
+
+	  for (xmlNode_iterator i = doc->root->childs;
+	       i != xmlNode_iterator();
+	       ++i)
+	    {
+	      if (xmlStrcmp(i->name, reinterpret_cast<CHAR *>("misc")) == 0)
+		{
+		  char v[10];
+		  sprintf(v, "%d", clock->update_rate());
+		  xmlSetProp(&*i, reinterpret_cast<CHAR *>("update"),
+			     reinterpret_cast<CHAR *>(v));
+		}
+	    }
+
+	  string tmp(file_name);
+	  tmp.append(".tmp");
+	  xmlSaveFile(tmp.c_str(), doc);
+	  rename(tmp.c_str(), file_name.c_str());
+	}
+      catch (...)
+	{
+	  xmlFreeDoc(doc);
+	  throw;
 	}
 
-      string tmp(file_name);
-      tmp.append(".tmp");
-      xmlSaveFile(tmp.c_str(), doc);
-      rename(tmp.c_str(), file_name.c_str());
-    }
-  catch (...)
-    {
       xmlFreeDoc(doc);
-      throw;
-    }
-
-  xmlFreeDoc(doc);
 #endif /* HAVE_GNOME_XML_PARSER_H */
+    }
 }
 
 void
 profile::restore(glclock *clock)
 {
+  changed = false;
+
 #ifdef HAVE_GNOME_XML_PARSER_H
   xmlDocPtr doc = xmlParseFile(file_name.c_str());
   if (doc == NULL)
@@ -156,12 +163,18 @@ profile::restore(glclock *clock)
 #endif /* HAVE_GNOME_XML_PARSER_H */
 }
 
+void
+profile::open(const char *name)
+{
+  file_name = name;
+}
+
 profile::~profile()
 {
 }
 
-profile::profile(const char *name)
-  : file_name(name)
+profile::profile()
+  : changed(false)
 {
 }
 
